# Fingerprint

./: .gitignore  EntladePins.c  ReadCapacity.c  main.c
Hardware/: readme.txt
Hardware/DualMetroPrototyp/: DualMetro.PcbLib  DualMetro.SchLib  DualMetroPrototyp.BomDoc  DualMetroPrototyp.OutJob  DualMetroPrototyp.PcbDoc  DualMetroPrototyp.PrjPcb  Job1.OutJob  PCB1.PcbDoc  PcbLib1.PcbLib  Schlib1.SchLib  Sheet1.SchDoc  aisler_simple2layer_designrules.RUL
Hardware/DualMetroPrototyp/__Previews/: Sheet1.SchDocPreview
Hardware/DualMetroPrototyp/exports/bom/: DualMetroPrototyp_v1-0.xlsx
Hardware/DualMetroPrototyp/exports/rules/: aisler_lfscp_designrules.RUL
Hardware/LFCSP_48_Breakout/: ADG726.SchDoc  Breakout.PcbDoc  LFCSP_48_Breakout.PrjPcb  LFCSP_48_Breakout.PrjPcbStructure  LFCSP_48_Breakout.SchLib  PCB1.PcbDoc  Sheet2.SchDoc
Hardware/LFCSP_48_Breakout/3dmodels/: ADG726 Breakout PCB.step  PCB1.step
Hardware/LFCSP_48_Breakout/__Previews/: ADG726.SchDocPreview  Sheet2.SchDocPreview
Software/multiplexer/: .gitignore  makefile  readme.md
Software/multiplexer/include/: stddef.h
Software/multiplexer/src/: CMakeLists.txt  adg726.c  adg726.h  defines.h  main.c  multiplexer.c  multiplexer.h  mydef.h  uart.c  uart.h
Software/platformio/Test1/: platformio.ini
Software/platformio/Test1/src/: main.cpp
Software/rust/adc_com_test/: Cargo.toml
Software/rust/adc_com_test/src/: main.rs
Software/stripped/: README.md  main.c  wait_for_key_ms.c
platformio/230528-191518-metro/: platformio.ini
platformio/native-blink/: platformio.ini
stripped/: tt_globals.h
